# Glide

./: .gitignore  Glide.spec  LICENSE  README.md  glide.py  glide.toml.example  make.bat  pyproject.toml  requirements.txt  run.py
assets/: render.py
docs/: PACKAGING.md  RECORDING.md
glide/: __init__.py  __main__.py  app.py  config.py  controller.py  filters.py  gestures.py  hud.py  selftest.py  winicon.py  winmouse.py
