[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "glide-gesture-mouse"
version = "1.0.0"
description = "Control your mouse with hand gestures via a webcam, across any number of monitors."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "opencv-python>=4.8",
    "mediapipe>=0.10.9",
    "numpy",
]

[project.scripts]
glide = "glide.__main__:main"

[tool.setuptools]
packages = ["glide"]
